sty/css/style.css
body {
    background: rgb(172, 230, 255);
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 16px;
    font-family: Arial, Helvetica, sans-serif;

}

.card {
    background: #f8f8f8;
    border-radius: 16px;
    padding: 32px;
    flex-basis: 616px;
}

.card__avatar {
    width: 148px;
    height: 148px;
    border-radius: 74px; 
}

.card__content {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-wrap: wrap;
    gap: 22px;
}

.card__description {
    line-height: 1.375;
    margin: 0;
}

.card__info {
    flex-basis: 380px;
    flex-grow: 1;
}

.card__link {
    text-decoration: none;
}

.card__name {
    font-size: 36px;
    font-weight: 400;
    margin: 0;
}

.card__position {
    font-style: italic;
    font-size: 18px;
    margin: 0;
    color: #545454;
}

